--- a/todo-api/package.json
+++ b/todo-api/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "elasticsearch": "^15.4.1",
-    "express": "^4.16.4",
+    "express": "^4.18.2",
     "pg": "^7.8.0",
+    "postgres": "^3.4.3",
     "redis": "^2.8.0"
   }
 }
